# content-automata

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.content-automata/history/: revisions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
content_automata/: __init__.py  alt_text.py  analytics.py  archive.py  async_client.py  auto_tagger.py  batch.py  cache.py  calendar.py  cli.py  config.py  config_loader.py  config_models.py  config_watcher.py  diff.py  dryrun.py  exceptions.py  history.py  i18n.py  models.py  pipeline.py  plagiarism.py  plugin_registry.py  progress.py  providers.py  quality.py  rate_limiter.py  readability.py  scheduler_cron.py  seo.py  serializer.py  social_validator.py  suggestions.py  templates.py  variations.py  weights.py  wordpress.py
content_automata/stages/: __init__.py  base.py  copywriter.py  image_gen.py  (+2 more)
examples/: basic_pipeline.py  config.yaml.example  ecommerce_pipeline.py  multilingual_pipeline.py  seo_blog_pipeline.py  smoke_tests.py  social_calendar.py
tests/: test_analytics.py  test_batch_edge.py  test_cli.py  test_concurrent.py  test_copywriter.py  test_edge_cases.py  test_exceptions.py  test_extra_modules.py  test_i18n.py  test_i18n_edge.py  test_image_gen.py  test_imports.py  test_integration.py  test_models.py  test_modules.py  test_pipeline.py  test_providers.py  test_research.py  test_scheduler.py  test_templates_edge.py  test_weights.py  test_wordpress_calendar.py
(+1 files in other folders)
